v1.0.14/_sources/CompatibilityMatrix/compatibility_matrix.md.txt
# Compatibility matrix

| Firmware Version                                                      | Supported VPU Hardware         | Supported Camera Head Hardware            | ifm3d-library | ifmVisionAssistant |
| --------------------------------------------------------------------- | ------------------------------ | ------------------------------------------ | ------------- | ------------------ |
| [1.1.??](../Firmware/ReleaseNotes/FW_1.1.x/FW_1.1.x_Release_Notes.md) | OVP800 <br> OVP801 <br> M04239 | O3R222 <br> O3R225AB <br> 03R225AC         | 1.4.X         | 2.6.X              |
| [1.0.14](../Firmware/ReleaseNotes/FW_1.0.x/FW_1.0.x_Release_Notes.md) | OVP800 <br> M04239             | O3R222 <br> O3R225AB <br> 03R225AC         | 1.2.6         | 2.6.14             |
| [0.16.23](../Firmware/FW_0.16.x/FW_0.16.x_Release_Notes.md)           | OVP800 <br> M04239             | O3R222 <br> O3R225AB <br> 03R225AC         | 1.1.1         | 2.6.7              |
| [0.14.23](../Firmware/FW_0.14.x/Firmware_0.14.x_Release_Notes.md)     | OVP800 <br> M03975 <br> MO4239 | O3R222 <br> O3R225 <br> M03933 <br> M03969 | 0.93.x        | NA                 |


:::{note}
Other combinations of versions than the ones listed in the table above could work but are not officially supported by ifm.
:::

To review hardware specifications, refer to the [available hardware documentation](../Technology/Hardware_Interfaces/hardware_specifications.md).

## ifm3d-ros and ifm3d-ros2 version compatibility

Please refer to the specific packages for ROS compatibility matrices:
- For ROS: [ifm3d-ros compatibility matrix](../SoftwareInterfaces/ROS/ifm3d-ros/README)
- For ROS2: [ifm3d-ros2 compatibility matrix](../SoftwareInterfaces/ROS/ifm3d-ros2/README)