v1.1.30/_sources/CompatibilityMatrix/compatibility_matrix.md.txt
# Compatibility matrix

| Firmware Version                                                      | Supported VPU Hardware         | Supported Camera Head Hardware            | ifm3d-library | ifmVisionAssistant |
| --------------------------------------------------------------------- | ------------------------------ | ------------------------------------------ | ------------- | ------------------ |
| [1.4.30](../Firmware/ReleaseNotes/FW_1.4.x/FW_1.4.x_release_notes.md) | M04308 <br> OVP810 <br> OVP811 | O3R222AA, O3R222AB, O3R222AC <br> O3R225AB, O3R225AC, O3R225AD | 1.4.3, 1.5.3 | 2.8.5 |
| [1.1.30](../Firmware/ReleaseNotes/FW_1.1.x/FW_1.1.x_Release_Notes.md) | OVP800 <br> OVP801 <br> M04239 | O3R222 <br> O3R225AB <br> 03R225AC         | 1.4.3         | 2.6.24, 2.7.6     |
| [1.0.14](../Firmware/ReleaseNotes/FW_1.0.x/FW_1.0.x_Release_Notes.md) | OVP800 <br> M04239             | O3R222 <br> O3R225AB <br> 03R225AC         | 1.2.6         | 2.6.14             |
| [0.16.23](../Firmware/ReleaseNotes/FW_0.16.x/FW_0.16.x_Release_Notes.md)           | OVP800 <br> M04239             | O3R222 <br> O3R225AB <br> 03R225AC         | 1.1.1         | 2.6.7              |
| [0.14.23](../Firmware/ReleaseNotes/FW_0.14.x/Firmware_0.14.x_Release_Notes.md)     | OVP800 <br> M03975 <br> MO4239 | O3R222 <br> O3R225 <br> M03933 <br> M03969 | 0.93.x        | NA                 |


:::{note}
Other combinations of versions than the ones listed in the table above could work but are not officially supported by ifm.
:::

To review hardware specifications, refer to the [available hardware documentation](../Technology/Hardware_Interfaces/hardware_specifications.md).

## ifm3d-ros and ifm3d-ros2 version compatibility

Please refer to the specific packages for ROS compatibility matrices:
- For ROS: [ifm3d-ros compatibility matrix](https://ros.ifm3d.com/latest/README.html#compatibility-matrix)
- For ROS2: [ifm3d-ros2 compatibility matrix](https://ros2.ifm3d.com/latest/README.html#software-compatibility-matrix)